--- a/service.html
+++ b/service.html
@@ -28,14 +28,17 @@
 </div>
 <!-- <p>
 My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p> -->
-<h2>K-12 Outreach Program</h2>
+<h2>K-12 STEM Outreach</h2>
 <img src="photos/out1.jpg" width="167", hspace="10"></img> <img src="photos/out2.jpg" width="300", hspace="10"></img> <img src="photos/out3.jpg" width="298", hspace="10"></img><img src="photos/out4.jpeg" width="167", hspace="10"></img>
 <br>
 Middle and high school students visiting our lab and flying DJI drone during VT Center for Enhancement of Engineering Diversity, "Imagination Camp".
 
-<h2>Mentorship</h2>
+<h2>Mentor</h2>
+Robotics: Science and Systems (RSS) Mentoring Program: <a href="https://roboticsconference.org/2020/attending/inclusion/index.html">Inclusion@RSS</a>, 2020
+<br>
+Academic Mentoring Experiences: mentored multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania, since 2018 
 
-<b>September 2019 - Present</b>, Resilient Team Orienteering Problem<br>
+<!-- <b>September 2019 - Present</b>, Resilient Team Orienteering Problem<br>
 <a href="https://www.linkedin.com/in/fanzhe-zhu-b15063165/">Guangyao Shi</a>, Ph.D. student <br>
 Dept. of Electrical & Computer Engineering, University of Maryland, College Park, USA 
 <br />
@@ -43,7 +46,23 @@ Dept. of Electrical & Computer Engineering, University of Maryland, College Park
 
 <b>May 2018 - August 2019</b>, <a href="https://sites.google.com/vt.edu/fanzhecav">Connected and Autonomous Vehicles</a><br>
 <a href="https://www.linkedin.com/in/fanzhe-zhu-b15063165/">Fanzhe Zhu</a>, Undergraduate student <br>
-Dept. of Electrical & Computer Engineering, Virginia Tech, Blacksburg, USA
+Dept. of Electrical & Computer Engineering, Virginia Tech, Blacksburg, USA -->
+
+<h2>Program Committee</h2>
+<a href="https://aaai.org/Conferences/AAAI-22/student-abstract-and-poster-program/">AAAI-22 Student Abstract and Poster Program</a>, 36th AAAI Conference on Artificial Intelligence, 2021 - 2022
+<br> 
+<a href="https://sac2021-irmas.isr.uc.pt/">Intelligent Robotics and Multi-Agent Systems Technical Track</a>, 37th ACM Symposium on Applied Computing (SAC 2022), 2021 - 2022
+
+<h2>Workshop Co-organizer</h2>
+Web Chair, <a href="https://sites.google.com/view/rsspioneers2021"> Robotics: Science and Systems (RSS) Pioneers</a>, 2021
+
+<h2>Reviewer</h2>
+Reviewed 30+ papers for journals and conferences in areas of Robotics, Algorithms, Controls, and Machine Learning, since 2016
+<br>
+<i>Journals</i>: IEEE Transactions on Robotics (T-RO), IEEE Transactions on Automation Science and Engineering (T-ASE), IEEE Robotics and Automation Letters (RA-L), Journal of Field Robotics(JFR), Robotics and Autonomous Systems (RAS), Swarm Intelligence, IEEE Transactions on Cybernetics, and Journal of The Franklin Institute
+<br>
+<i>Conferences</i>: Robotics: Science and Systems
+(RSS), IEEE International Conference on Robotics and Automation (ICRA), IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Workshop on the Algorithmic Foundations of Robotics (WAFR), American Control Conference (ACC), and International Conference on Unmanned Aircraft Systems (ICUAS) 
 
 <div id="footer">
 <div id="footer-text">
