--- a/teaching.html
+++ b/teaching.html
@@ -36,19 +36,19 @@ The GRASP Lab, University of Pennsylvania
 <h2>Guest Lecturer</h2>
 <!-- <b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
 <b>December 2019</b>, Student Presentation Organization <br> -->
-CMSC 818B: Decision-Making for Robotics, Fall 2019<br>
+<a href="http://tokekar.com/teaching/CMSC818B-F19/index.html">CMSC 818B: Decision-Making for Robotics</a>, Fall 2019<br>
 Dept. of Computer Science, University of Maryland
 <br>
 <br>
-ECE 4984/5984: (Advanced) Robot Motion Planning, Fall 2018<br>
+<a href="http://tokekar.com/teaching/4984-5984S17/index.html">ECE 4984/5984: (Advanced) Robot Motion Planning</a>, Fall 2018<br>
 Dept. of Electrical & Computer Engineering, Virginia Tech
 
 <h2>Teaching Assistant</h2>
- ECE 4405: Control Systems, Fall 2016<br>
+<a href="https://dev.coursicle.com/vt/courses/ECE/4405/">ECE 4405: Control Systems</a>, Fall 2016<br>
 Dept. of Electrical & Computer Engineering, Virginia Tech
 
-<h2>Mentor</h2>
-I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018. 
+<!-- <h2>Mentor</h2>
+I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018.  -->
 
 <div id="footer">
 <div id="footer-text">
