--- a/publications.html
+++ b/publications.html
@@ -56,27 +56,27 @@ function toggleBibtex(articleid) {
 
 <li><p><b>L. Zhou</b>, V. D. Sharma, Q. Li, A. Prorok, A.
   Ribeiro, and V. Kumar, “Graph Neural Networks for Decentralized Multi-Robot Submodular Action
-  Selection”. <a href="http://arxiv.org/abs/2105.08601">[arXiv]</a> 
+  Selection”, RA-L+ICRA'22 submitted. <a href="http://arxiv.org/abs/2105.08601">[arXiv]</a> 
 </p>
 </li>
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>”. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>,” T-RO submitted. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
 </li>
 
-<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams”. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
+<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” RA-L+ICRA'22 submitted. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
 </p> 
 </li>
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” T-RO revision submitted. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
 </p>
 </li>
 
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination”. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” T-RO revision submitted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
 </p>
 </li>
 
-<li><p>Z. Zhang, <b>L. Zhou</b>, and P. Tokekar, “Strategies to Inject Spoofed Measurement Data.” <a href="https://arxiv.org/abs/1809.04756">[arXiv]</a>
+<li><p>Z. Zhang, <b>L. Zhou</b>, and P. Tokekar, “Strategies to Inject Spoofed Measurement Data,” RAS submitted. <a href="https://arxiv.org/abs/1809.04756">[arXiv]</a>
 </p> 
 </li>
 
