--- a/teaching.html
+++ b/teaching.html
@@ -46,6 +46,10 @@ Dept. of Electrical & Computer Engineering, Virginia Tech
 <h2>Teaching Assistant</h2>
 <a href="https://dev.coursicle.com/vt/courses/ECE/4405/">ECE 4405: Control Systems</a>, Fall 2016<br>
 Dept. of Electrical & Computer Engineering, Virginia Tech
+<br>
+<br>
+Public Management and Policy Analysis, Spring 2014<br>
+School of International and Public Affairs, Shanghai Jiao Tong University
 
 <!-- <h2>Mentor</h2>
 I have worked with multiple gradate and undergraduate students at Virginia Tech, University of Maryland, and University of Pennsylvania since 2018.  -->
