--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://link.springer.com/article/10.1007/s43154-021-00046-5">Multi-Robot Coordination and Planning in Uncertain and Adversarial Environments</a>,” <i>Current Robotics Reports, Springer</i>. <a href="https://arxiv.org/abs/2105.00389">[arXiv]</a>
+<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://link.springer.com/article/10.1007/s43154-021-00046-5">Multi-Robot Coordination and Planning in Uncertain and Adversarial Environments</a>,” <i>Current Robotics Reports, Springer</i>. Note: invited paper. <a href="https://arxiv.org/abs/2105.00389">[arXiv]</a>
 </p>
 </li>
 
@@ -103,7 +103,7 @@ function toggleBibtex(articleid) {
 <!-- <li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, Tree Search Techniques for Minimizing Detectability and Maximizing Visibility”. </p>
 </li> -->
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (TRO)</i>, 35(5), pp. 1206-1219, 2019. Note: also accepted to present at ICRA'20. <a href="https://arxiv.org/abs/1709.06428">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
+<li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (TRO)</i>, 35(5), pp. 1206-1219, 2019. Note: also selected for presentation at ICRA'20. <a href="https://arxiv.org/abs/1709.06428">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
 </li>
 <div id="bib_zhou2019sensor" class="bibtex noshow"><pre>
 @Article{zhou2019sensor,
@@ -113,7 +113,7 @@ journal = {IEEE Transactions on Robotics},
 year = {2019},
 }
 </pre></div>
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href="https://ieeexplore.ieee.org/document/8534468">Resilient Active Target Tracking with Multiple Robots</a>,” <i>IEEE Robotics and Automation Letters (RA-L)</i>, 4(1): pp. 129-136, 2019. Note: also presented at ICRA'19. <a href="https://arxiv.org/abs/1809.04032">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019resilient')">[BibTex]</a> <a href="https://drive.google.com/file/d/1OdoNpONx3mjJt7733dLzXnsri2DZB_9k/view?usp=sharing">[Digest Slides]</a> <a href="https://drive.google.com/file/d/1lmN58r1kQp_1BCMTm4FyNpm8XBavkKF_/view?usp=sharing">[Poster]</a> <a href="https://www.youtube.com/watch?v=0pGrg514_eg">[Video]</a></p>
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href="https://ieeexplore.ieee.org/document/8534468">Resilient Active Target Tracking with Multiple Robots</a>,” <i>IEEE Robotics and Automation Letters (RA-L)</i>, 4(1): pp. 129-136, 2019. Note: also selected for presentation at ICRA'19. <a href="https://arxiv.org/abs/1809.04032">[arXiv]</a> <a href="javascript:toggleBibtex('zhou2019resilient')">[BibTex]</a> <a href="https://drive.google.com/file/d/1OdoNpONx3mjJt7733dLzXnsri2DZB_9k/view?usp=sharing">[Digest Slides]</a> <a href="https://drive.google.com/file/d/1lmN58r1kQp_1BCMTm4FyNpm8XBavkKF_/view?usp=sharing">[Poster]</a> <a href="https://www.youtube.com/watch?v=0pGrg514_eg">[Video]</a></p>
 </li>
 <div id="bib_zhou2019resilient" class="bibtex noshow"><pre>
 @article{zhou2019resilient,
@@ -285,6 +285,8 @@ year = {2019},
 <ol>
 
 <li><p><b>L. Zhou</b> and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE International Conference on Robotics and Automation (ICRA),</i> 2020.
+
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “<a href="https://ieeexplore.ieee.org/document/8534468">Resilient Active Target Tracking with Multiple Robots</a>,” <i>IEEE International Conference on Robotics and Automation (ICRA),</i> 2019.
 
 <li><p><b>L. Zhou</b> and P. Tokekar, “Attack-Resilient Submodular Maximization for Multi-Robot Planning,” <i>Southeast Controls Conference,</i> 2019.
 
