--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@ I also share a common interest with my partner, Tiantian, in the areas of Agricu
 <h2>Recent News</h2>
 <ul>
 
+
+ 
+<li><p><b>Sep &lsquo;11:</b> I am serving as a Program Committee member of the <a href="https://aaai.org/Conferences/AAAI-22/student-abstract-and-poster-program/"> AAAI-22 Student Abstract and Poster Program</a>.</p>  
+
+<li><p><b>Sep &lsquo;06:</b> I am serving as a Program Committee member of the IRMAS - <a href="https://sac2022-irmas.isr.uc.pt"> Intelligent Robotics and Multi-Agent Systems technical track </a> on the <a href="http://www.sigapp.org/sac/sac2022"> 37th ACM Symposium on Applied Computing (SAC 2022)</a>.</p>
+
+<li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
+</li> 
+
 <li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
 </li> 
 
