--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@ function toggleBibtex(articleid) {
 <ol>
 
 
-<li><p><b>L. Zhou</b> and V. Kumar, “Robust Multi-Robot Active Target Tracking Against Sensing and Communication Attacks”. <a href="https://arxiv.org/abs/2109.09838">[arXiv]</a> 
+<li><p><b>L. Zhou</b> and V. Kumar, “Robust Multi-Robot Active Target Tracking Against Sensing and Communication Attacks,” T-RO submitted. <a href="https://arxiv.org/abs/2109.09838">[arXiv]</a> 
 </p>
 </li>
 
@@ -72,7 +72,7 @@ function toggleBibtex(articleid) {
 </li>
 
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” T-RO revision submitted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” T-RO 2nd revision submitted. <a href="https://arxiv.org/abs/2003.10492">[arXiv]</a>
 </p>
 </li>
 
