--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ My research focuses on enabling <b>security, trustworthiness, and long-term auto
 <br />
 <br>
 
-I also share a common interest with my partner, Tiantian, in the areas of Agriculture & Food Science. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
+I also share a common interest with my wife, Tiantian, in the areas of Agriculture & Food Science. She is a Postdoctoral Researcher at Cornell University. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
 
 
 </p>
