--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@ Philadelphia, PA, USA <br />
 E-mail: <i>lfzhou</i> @ seas.upenn.edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+<p>I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that, I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
 
 <br />
 <br>
 
-My research focuses on enabling <b>security, trustworthiness, and long-term autonomy</b> in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate <b>secure, reliable, and scalable multi-robot autonomy</b> when robots use data-driven machine learning techniques. I am especially interested in how <b>collaborative intelligence and learning paradigms</b> can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
+My research focuses on enabling <b>security, trustworthiness, and long-term autonomy</b> in robotics and autonomous systems. I have worked in related areas such as <i>multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making.</i> My long-term goal is to investigate <b>secure, reliable, and scalable multi-robot autonomy</b> when robots use data-driven machine learning techniques in the areas of <b> cyber-physical systems, the Internet of Things, precision agriculture, and smart cities.</b> I am especially interested in how <i>collaborative intelligence and learning paradigms</i> can help overcome challenges related to adversarial attacks and uncertainties on the perceptions and communications of decentralized multi-robot teams. <a href="research.html">Find out more</a>.
 
 <br />
 <br>
 
-I also share a common interest with my wife, Tiantian, in the areas of Agriculture & Food Science. She is a Postdoctoral Researcher at Cornell University. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
+
+I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas of Agricultural Robotics & Food Science. She is a Postdoctoral Researcher at Cornell University. To learn more about her research, see <a href="https://sites.google.com/vt.edu/tiantianlin">here</a>. 
 
 
 </p>
@@ -142,7 +143,7 @@ I also share a common interest with my wife, Tiantian, in the areas of Agricultu
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
