--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
 </li> 
 
-<li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
-</li> 
-
+<!-- <li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
+</li>  -->
 
 <li><p><b>June &lsquo;30:</b> Our paper on <a href="https://arxiv.org/abs/2011.01095">Risk-Aware Submodular Optimization for Stochastic TSP</a> was accepted for publication in <a href= "https://www.iros2021.org/">IROS 2021</a>.</p>
 </li>	
