--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>,” T-RO submitted. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>,” T-RO revision submitted. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
 </li>
 
 <li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” RA-L+ICRA'22 submitted. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
