--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 <td align="left"><p>Postdoc, <a href="https://www.upenn.edu/">University of Pennsylvania</a><br />
 <!-- 621 Whittemore Hall, Virginia Tech, <br /> -->
 Philadelphia, PA, USA <br /> 
-
-
-E-mail: <i>lfzhou</i> @ seas.upenn.edu</p>
+E-mail: <i>lfzhou</i> @ seas.upenn.edu
+<p style="color:red;">I am currently on the 2021-2022 academic job market.</p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I am a Postdoctoral Researcher in the <a href="https://www.grasp.upenn.edu/">GRASP Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, working with <a href="https://www.kumarrobotics.org/">Prof. Vijay Kumar</a>. I received my Ph.D. degree at <a href="https://vt.edu/">Virginia Tech</a> under the supervision of <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in the <a href="https://raaslab.org/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that, I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
