--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@ function toggleBibtex(articleid) {
 </p> 
 </li>
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” T-RO revision submitted. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” T-RO conditionally accepted. <a href="https://arxiv.org/abs/1910.01208">[arXiv]</a> 
 </p>
 </li>
 
