--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 </p>
 <a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;>[RA-L+ICRA'19]</a>: Robust submodular maximization against robot/sensor attacks/failures;
 
-<br><a href="https://ieeexplore.ieee.org/document/9197243" target=&ldquo;blank&rdquo;>[ICRA'20]</a>,<a href="https://arxiv.org/abs/1910.01208" target=&ldquo;blank&rdquo;> [T-RO submission]</a>: Decentralized (clique-based) robust submodular maximization against robot/sensor attacks/failures (left video); 
+<br><a href="https://ieeexplore.ieee.org/document/9197243" target=&ldquo;blank&rdquo;>[ICRA'20]</a>,<a href="https://arxiv.org/abs/1910.01208" target=&ldquo;blank&rdquo;> [T-RO conditionally accepted]</a>: Decentralized (clique-based) robust submodular maximization against robot/sensor attacks/failures (left video); 
 
 <br> <a href="https://ieeexplore.ieee.org/abstract/document/9431677" target=&ldquo;blank&rdquo;>[RA-L'21]</a>: Distributed (consensus-based) robust submodular maximization against robot/sensor attacks/failures;
 
