--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <ul>
 
 
+
+<li><p><b>Jan &lsquo;05:</b> I gave an invited seminar in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering at Drexel University</a>.
  
 <li><p><b>Sep &lsquo;11:</b> I am serving as a Program Committee member of the <a href="https://aaai.org/Conferences/AAAI-22/student-abstract-and-poster-program/"> AAAI-22 Student Abstract and Poster Program</a>.</p>  
 
@@ -113,17 +115,17 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <li><p><b>April &lsquo;21:</b> I was accepted as a member of the 2020 cohort of the <a href="https://sites.google.com/view/rsspioneers2020/">RSS Pioneers Workshop</a>.</p>
 </li>
 
-<li><p><b>Febuary &lsquo;21:</b> I gave a talk in <a href="https://mme.wsu.edu/">WSU School of Mechanical and Materials Engineering</a>.</p>
+<li><p><b>Febuary &lsquo;21:</b> I gave an invited seminar in <a href="https://mme.wsu.edu/">WSU School of Mechanical and Materials Engineering</a>.</p>
 </li>
 
-<li><p><b>Febuary &lsquo;07:</b> I gave a talk in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">WPI Robotics Engineering</a>.</p>
+<li><p><b>Febuary &lsquo;07:</b> I gave an invited seminar in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">WPI Robotics Engineering</a>.</p>
 </li>
 
 <li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
 </li>
 
 
-<li><p><b>July &lsquo;19:</b> I gave a talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>.</p>
+<li><p><b>July &lsquo;19:</b> I gave an invited seminar in the College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>.</p>
 </li>
 
 
@@ -141,7 +143,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
