--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <ul>
 
 
+<li><p><b>Jan &lsquo;09:</b> I gave an invited seminar in the <a href="https://www.imse.hku.hk/">Department of Industrial and Manufacturing Systems at The University of Hong Kong</a>.
 
 <li><p><b>Jan &lsquo;05:</b> I gave an invited seminar in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering at Drexel University</a>.
  
@@ -143,7 +144,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-09, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
