--- a/teaching.html
+++ b/teaching.html
@@ -23,11 +23,9 @@
 <div class="menu-item"><a href="https://twitter.com/Lifeng917">Twitter</a></div>
 </td>
 <td id="layout-content">
-<div id="toptitle">
+<div id="toptitle"></div>
 <h1>Teaching</h1>
-</div>
-<p>
-My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p>
+<p> My teaching philosophy is to inspire students to understand and learn by examples, and engage them in problem-finding and problem-solving through implementations. </p>
 
 <h2>Instructor</h2>
 Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
