--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>Jan &lsquo;16:</b> I gave an invited seminar in the <a href="https://hkust-gz.edu.cn/academics/four-hubs/systems-hub">Robotics and Autonomous Systems Thrust at the Hong Kong University of Science and Technology (Guangzhou)</a>.  
 
-<li><p><b>Jan &lsquo;09:</b> I gave an invited seminar in the <a href="https://www.imse.hku.hk/">Department of Industrial and Manufacturing Systems at The University of Hong Kong</a>.
+<li><p><b>Jan &lsquo;09:</b> I gave an invited seminar in the <a href="https://www.imse.hku.hk/">Department of Industrial and Manufacturing Systems at the University of Hong Kong</a>.
 
 <li><p><b>Jan &lsquo;05:</b> I gave an invited seminar in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering at Drexel University</a>.
  
