--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 
 <br> <a href="https://roboticsconference.org/2020/program/papers/95.html" target=&ldquo;blank&rdquo;>[RSS'20]</a>, <a href="https://arxiv.org/abs/2003.13896" target=&ldquo;blank&rdquo;>[T-RO submission]</a>: Robust team orienteering over a longer planning time against robot/sensor attacks/failures;
 
-<br> <a href="https://arxiv.org/abs/2109.09838" target=&ldquo;blank&rdquo;>[T-RO submission]</a>: Robust monotone maximization against robot/sensor and communication attacks/failures;
+<br> <a href="https://arxiv.org/abs/2109.09838" target=&ldquo;blank&rdquo;>[ACC'22 invited paper, T-RO submission]</a>: Robust monotone maximization against robot/sensor and communication attacks/failures;
 
 <br> <a href="https://ieeexplore.ieee.org/document/9340871" target=&ldquo;blank&rdquo;>[IROS'20]</a>: Resilient coordination to adapt to and recover from robot/sensor failures (right video). 
 <!-- </p>[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]</p> -->
@@ -86,7 +86,7 @@ To this end, I developed a <b>GNN-based imitation learning framework</b> that le
 
 <br> <a href="https://arxiv.org/abs/2011.01095" target=&ldquo;blank&rdquo;>[IROS'21]</a>: Risk-aware submodular optimization for stochastic traveling salesperson problem. 
 
-<br> <a href="https://arxiv.org/abs/2105.03813" target=&ldquo;blank&rdquo;>[RA-L+ICRA'22 submission]</a>: Adaptive and risk-aware target tracking for robot teams with heterogeneous sensors (right video). 
+<br> <a href="https://arxiv.org/abs/2105.03813" target=&ldquo;blank&rdquo;>[RA-L+ICRA'22 conditionally accepted]</a>: Adaptive and risk-aware target tracking for robot teams with heterogeneous sensors (right video). 
 
 
 <h2>Reducing Communication by Self-Triggered Control and Forming Subteams</h2>
@@ -142,7 +142,7 @@ We study the problem of <b>designing spoofing signals to corrupt and mislead the
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
