--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 
 <h2>Instructor</h2>
 Seminar Course: Multi-Robot Coordination, Planning, and Learning (in preparation), Spring 2022 <br>
-The GRASP Lab, University of Pennsylvania
+University of Pennsylvania
 
 <h2>Guest Lecturer</h2>
 <!-- <b>September 2019</b>, Resilient and Risk-Aware Submodular Maximization <br>
@@ -54,7 +54,7 @@ I have worked with multiple gradate and undergraduate students at Virginia Tech,
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
