--- a/index.html
+++ b/index.html
@@ -80,11 +80,27 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <h2>Recent News</h2>
 <ul>
 
+
+
+
+<li><p><b>Feb &lsquo;04:</b> I gave an invited seminar in the <a href="https://engineering.buffalo.edu/computer-science-engineering.html">Department of Computer Science and Engineering at the University at Buffalo</a>.
+
+<li><p><b>Feb &lsquo;04:</b> I was awarded <a href="https://www.daad.de/en/the-daad/postdocnet/">the DAAD AInet Fellowship!</a>
+
+<li><p><b>Feb &lsquo;02:</b> I gave an invited seminar in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering at Drexel University</a>.
+
+  <li><p><b>Feb &lsquo;01:</b> Our paper on <a href="https://arxiv.org/abs/2105.03813">Adaptive and Risk-Aware Target Tracking</a> was conditionally accepted in RA-L+ICRA'2022.</p>
+</li> 
+
+<li><p><b>Jan &lsquo;31:</b> Our paper on <a href="https://arxiv.org/abs/2109.09838">Robust Coordination Against Sensing and Communication Attacks</a> was accepted as <i>an invited paper</i> in <a href= "https://acc2022.a2c2.org/">ACC'2022</a>.</p>
+</li> 
+
 <li><p><b>Jan &lsquo;16:</b> I gave an invited seminar in the <a href="https://hkust-gz.edu.cn/academics/four-hubs/systems-hub">Robotics and Autonomous Systems Thrust at the Hong Kong University of Science and Technology (Guangzhou)</a>.  
 
 <li><p><b>Jan &lsquo;09:</b> I gave an invited seminar in the <a href="https://www.imse.hku.hk/">Department of Industrial and Manufacturing Systems at the University of Hong Kong</a>.
 
-<li><p><b>Jan &lsquo;05:</b> I gave an invited seminar in the <a href="https://drexel.edu/engineering/academics/departments/electrical-computer-engineering/">Department of Electrical and Computer Engineering at Drexel University</a>.
+<li><p><b>Dec &lsquo;27:</b> Our paper on <a href="https://arxiv.org/abs/1910.01208">Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</a> was conditionally accepted in T-RO.</p>
+</li> 
  
 <li><p><b>Sep &lsquo;11:</b> I am serving as a Program Committee member of the <a href="https://aaai.org/Conferences/AAAI-22/student-abstract-and-poster-program/"> AAAI-22 Student Abstract and Poster Program</a>.</p>  
 
@@ -96,20 +112,20 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <!-- <li><p><b>July &lsquo;11:</b> I co-organized the <a href="https://sites.google.com/view/rsspioneers2021">2021 RSS Pioneers Workshop</a> as a web chair. </p>
 </li>  -->
 
-<li><p><b>June &lsquo;30:</b> Our paper on <a href="https://arxiv.org/abs/2011.01095">Risk-Aware Submodular Optimization for Stochastic TSP</a> was accepted for publication in <a href= "https://www.iros2021.org/">IROS 2021</a>.</p>
+<!-- <li><p><b>June &lsquo;30:</b> Our paper on <a href="https://arxiv.org/abs/2011.01095">Risk-Aware Submodular Optimization for Stochastic TSP</a> was accepted for publication in <a href= "https://www.iros2021.org/">IROS 2021</a>.</p>
 </li>	
 
 <li><p><b>April &lsquo;26:</b> Our paper on <a href="http://raaslab.org/pubs/liu2021distributed.pdf">distributed resilient submodular action selection</a> was accepted for publication in <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7083369">IEEE Robotics and Automation Letters (RA-L)</a>.</p>
 </li>	
 
 <li><p><b>Feb &lsquo;28:</b> Our paper on <a href= "https://arxiv.org/abs/2011.01476"> maximizing submodular objective while guaranteeing the connectivity of robot teams </a>  was accepted for publication in <a href= "http://www.icra2021.org/">ICRA 2021</a>.</p>
-</li>
+</li> -->
 
-<li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/abs/2003.11675"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and  <a href= "https://arxiv.org/abs/1910.01917"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
-</li>
+<!-- <li><p><b>June &lsquo;30:</b> Our papers on <a href= "https://arxiv.org/abs/2003.11675"> risk-aware planning using uncertain extractions from Bayesian deep learning </a> and  <a href= "https://arxiv.org/abs/1910.01917"> resilient team coverage to deal with robot failures </a> were accepted for publication in <a href= "https://www.iros2020.org/">IROS 2020</a>.</p>
+</li> -->
 
-<li><p><b>May &lsquo;05:</b> Our <a href= "https://roboticsconference.org/2020/program/papers/95.html">paper</a>  on robust team orienteering was accepted by <a href= "https://roboticsconference.org/">Robotics: Science and Systems, 2020</a>.</p>
-</li>
+<!-- <li><p><b>May &lsquo;05:</b> Our <a href= "https://roboticsconference.org/2020/program/papers/95.html">paper</a>  on robust team orienteering was accepted by <a href= "https://roboticsconference.org/">Robotics: Science and Systems, 2020</a>.</p>
+</li> -->
 
 <li><p><b>April &lsquo;27:</b> Successfully defended my Ph.D. dissertation! Please watch <a href= "https://www.youtube.com/watch?v=0KrW3MDO2Pg">my virtual defense online</a>.</p>
 </li>
@@ -123,8 +139,8 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 <li><p><b>Febuary &lsquo;07:</b> I gave an invited seminar in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">WPI Robotics Engineering</a>.</p>
 </li>
 
-<li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
-</li>
+<!-- <li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
+</li> -->
 
 
 <li><p><b>July &lsquo;19:</b> I gave an invited seminar in the College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>.</p>
@@ -145,7 +161,7 @@ I also share common interests with my dear wife, Dr. Tiantian Lin, in the areas 
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-09, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
