--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@ function toggleBibtex(articleid) {
 <li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks</a>,” T-RO revision submitted. <a href="https://arxiv.org/abs/2003.13896">[arXiv]</a> </p>
 </li>
 
-<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” RA-L+ICRA'22 submitted. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
+<li><p>S. Mayya, R. K. Ramachandran, <b>L. Zhou</b>, G. S. Sukhatme, and V. Kumar, “Adaptive and Risk-Aware Target Tracking with Heterogeneous Robot Teams,” RA-L+ICRA'22 conditionally accepted. <a href=https://arxiv.org/abs/2105.03813>[arXiv]</a>
 </p> 
 </li>
 
@@ -177,6 +177,10 @@ year = {2019},
 
 <h2>Conference Papers</h2>
 <ol>
+
+<li><p><b>L. Zhou</b> and V. Kumar, “Robust Multi-Robot Active Target Tracking Against Sensing and Communication Attacks,” <i>The 2022 American Control Conference (ACC'22)</i>. Note: invited paper. <a href="https://arxiv.org/abs/2109.09838">[arXiv]</a> 
+</p>
+</li>
 
 <li><p>R. Balasubramanian, <b>L. Zhou</b>, P. Tokekar and P.B. Sujit, “Risk-Aware Submodular Optimization for Stochastic Travelling Salesperson Problem,”  <i>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS'21)</i>. <a href="https://arxiv.org/abs/2011.01095">[arXiv]</a> 
 </p>
@@ -302,7 +306,7 @@ year = {2019},
 
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-21, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-05, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
